--- a/app/views/dashboard_items/new.html.erb
+++ b/app/views/dashboard_items/new.html.erb
@@ -18,7 +18,7 @@
     <section class="solid dashboard-add-name">
       <h3>Add DashBoard Name</h3>
       <p>Give the dashboard being created a proper name</p>
-      <input type='text' placeholder="Dashboard name"/>
+      <input type='text' placeholder="Dashboard name" id="dashboard-name-input"/>
     </section>
     <section class="solid dashboard-add-type">
       <h3>Choose A Type</h3>
@@ -40,7 +40,7 @@
     <section class="solid">
       <h3>Select DashBoard Group</h3>
       <p>Select a dashboard group to put your dashboard</p>
-      <select data-placehoder="Group" style="width:120px;" class="chosen-select">
+      <select data-placehoder="Group" style="width:120px;" class="chosen-select" id="dashboard-group-name">
         <option ></option>
         <%@dashboards.each do |dashboard| %>
             <option value="<%= dashboard.id%>"><%= dashboard.name%></option>
@@ -50,7 +50,7 @@
     <section class="solid">
       <h3>Finish</h3>
       <p>Publish your dashboard since you have done</p>
-      <a class="btn btn-primary">Publish Now</a>
+      <a class="btn btn-primary" id="add-dashboard">Publish Now</a>
     </section>
   </aside>
 
