--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -2,10 +2,10 @@
       value =KpiUnit.parse_entry_value(kpi.unit, entry.value)  if(entry=KpiEntriesHelper.get_kpi_entry_for_entry(kpi.user_kpi_item_id,@parsed_entry_at))
       percent=nil
       if value
-          if kpi.user_kpi_item_target==0
+          if kpi.user_kpi_item_target_max==0
             percent="NaN%"
           else
-          percent="#{(value/ kpi.user_kpi_item_target*100).round(2)}%"
+          percent="#{(value/ kpi.user_kpi_item_target_max*100).round(2)}%"
           end
       end
      %>
