--- a/app/views/dashboard_items/new.html.erb
+++ b/app/views/dashboard_items/new.html.erb
@@ -111,21 +111,21 @@
           <li interval="500"><a>Y</a></li>
         </ul>
       </div>
-      <div class="put-db-chart">
-        <div class="chart-container-top" id="chart-container-top">
+      <div class="put-db-chart" id="put-db-chart">
+        <div class="chart-container-top">
           <table>
             <tr>
-              <td>$1000</td>
-              <td>Max</td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
-              <td>$10</td>
-              <td>Min</td>
+              <td>Max value</td>
+              <td>Min value</td>
             </tr>
           </table>
         </div>
-        <div class="db-chart-container" id="chart-container"></div>
-        <div id="chart-container-right" class="chart-container-right">
+        <div class="db-chart-container" ></div>
+        <div class="chart-container-right">
           <p>12%</p>
           <p>monthly sales</p>
           <table>
@@ -139,20 +139,20 @@
             </tr>
           </table>
         </div>
-        <div id="chart-container-right-scatter" class="chart-container-right">
+        <div class="chart-container-right chart-container-right-scatter">
 
         </div>
-        <div class="chart-container-bottom" id="chart-container-bottom">
+        <div class="chart-container-bottom" >
           <table>
             <tr>
-              <td>21</td>
-              <td>109</td>
-              <td>$34</td>
-              <td>$190</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
               <td>Out of Target</td>
-              <td>Total Amount</td>
+              <td>Total Record</td>
               <td>Average Value</td>
               <td>Total Value</td>
             </tr>
