--- a/app/views/dashboard_items/new.html.erb
+++ b/app/views/dashboard_items/new.html.erb
@@ -124,7 +124,7 @@
             </tr>
           </table>
         </div>
-        <div class="db-chart-container" ></div>
+        <div id="chart-container" class="db-chart-container" ></div>
         <div class="chart-container-right">
           <p></p>
           <p></p>
