--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -300,7 +300,7 @@
     left:0px;
     right:0px;
     height:85px;
-    /*display:none;*/
+    display:none;
 }
 .chart-container-top>table{
     width:100%;
@@ -329,12 +329,6 @@
     font-size:13px;
     color:rgba(0,0,0,0.4);
 }
-/*.chart-container-top>table tr:first-of-type td:last-of-type{*/
-    /*color:cornflowerblue;*/
-/*}*/
-/*.chart-container-top>table tr:nth-of-type(2) td:last-of-type{*/
-    /*color:lightpink;*/
-/*}*/
 /***************************** container
 *******************************/
 .db-chart-container{
@@ -346,7 +340,7 @@
     /*bottom:0px;*/
     right:278px;
     /*right:0px;*/
-    transition:top 0.25s linear 1s,bottom 0.35s linear 1s,right 0.35s linear 1s
+    transition:top 0.25s linear 1s,bottom 0.35s linear 1s,right 0.35s linear 1s;
 }
 /***************************** right
 *******************************/
@@ -358,7 +352,7 @@
     /*top:0px;*/
     /*bottom:00px;*/
     width:278px;
-    /*display:none;*/
+    display:none;
 }
 .chart-container-right>p{
     text-align:center;
@@ -418,7 +412,7 @@
     left:0px;
     height:80px;
     right:0px;
-    /*display:none*/
+    display:none
 }
 .chart-container-bottom>table{
     width:100%;
