--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -103,8 +103,12 @@
                                    <td id="sum-value" align="left"></td>
                               </tr>
                               <tr>
-                                   <td width="80px"  align="right"><%= t 'analytics.target'%>:</td>
-                                   <td id="target" align="left"></td>
+                                   <td width="80px"  align="right">目标上限:</td>
+                                   <td id="target-max" align="left"></td>
+                              </tr>
+                              <tr>
+                                   <td width="80px"  align="right">目标下限:</td>
+                                   <td id="target-min" align="left"></td>
                               </tr>
                               <tr class="hide">
                                    <td width="80px"  align="right"><%= t 'analytics.aver_target'%>:</td>
