--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -44,10 +44,10 @@
      </nav>
      <ul class="nav-user-part">
                            <li>
-                               <i class="icon-user"></i>
+                               <i class="icon-user" title="<%= current_user.first_name%>"></i>
                            </li>
                            <li class='empty'>
-                               <span><%= current_user.first_name%></span>
+                               <span>&nbsp;</span>
                            </li>
                            <li>
                              <a href="/user_sessions/destroy"><%= t 'auth.view.signout_btn'%></a>
