--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -1,18 +1,20 @@
 /********************************************************************************************************* 分类系列
 *******************************************************************************************************************/
 .manage-left-menu{
-    background-color:#FBFBFB;
-    position:absolute;
-    top:70px;
-    left:0;
-    bottom:0;
+    background-color:#EFF2F6;
+    display:table-cell;
     width:150px;
+    min-width:150px;
+    max-width:150px;
     margin:0;
     padding:0;
     list-style-type: none;
     overflow-y:auto;
     overflow-x:hidden;
     z-index:20;
+    box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
 }
 .manage-left-menu li:nth-of-type(2){
     position:relative;
@@ -111,22 +113,16 @@
 /********************************************************************************************************* 右边的内容部分
 *******************************************************************************************************************/
 .manage-right-content{
-    position:absolute;
-    top:70px;
-    left:150px;
-    bottom:0px;
-    right:0px;
+
+    height:100%;
     overflow-x:hidden;
-    overflow-y:auto;
     transition:left 0.35s ease-out,right 0.55s ease-out;
 }
 /**************************************************** 上角的按钮
 *****************************************************************/
 .manage-btn-group{
-    position:relative;
-    top:35px;
-    left:32px;
     height:70px;
+    margin-left:31px;
 }
 .manage-btn-group>a{
     width:100px;
@@ -177,8 +173,7 @@
 /**************************************************** 下角的列表
 *****************************************************************/
 .manage-right-list{
-    position:relative;
-    top:58px;
+    margin-top:32px;
     padding-bottom:40px;
 }
 .right-list-top-control{
