--- a/app/views/entities/_left_menu.html.erb
+++ b/app/views/entities/_left_menu.html.erb
@@ -1,5 +1,6 @@
 
 <ul class="manage-left-menu" id="manage-left-menu" type="group">
+<div style="width:auto;height:71px;"></div>
     <li>管理用户</li>
     <li id="manage-menu-add">
         <input type="text"/>
