--- a/app/views/kpi_categories/_left_menu.html.erb
+++ b/app/views/kpi_categories/_left_menu.html.erb
@@ -1,4 +1,5 @@
 <ul class="manage-left-menu" id="manage-left-menu" type="category">
+       <div style="width:auto;height:71px;"></div>
        <li><%= t 'manage.kpi.title'%></li>
        <li id="manage-menu-add">
            <input type="text" />
