--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -1,5 +1,6 @@
+<div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
 <%= render :partial=>'kpi_categories/left_menu'%>
-<%= render :partial=>'kpis/new'%>
+
 <div class="manage-right-content" id="manage-right-content">
 
      <div class="manage-btn-group" id="manage-btn-group">
@@ -63,6 +64,9 @@
 
      </div>
 </div>
+</div>
+
+<%= render :partial=>'kpis/new'%>
 
 <div class="kpi-library" id="kpi-library">
      <div>
