--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-
+<div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
 <%= render :partial=>'entities/left_menu'%>
 
 <div class="manage-right-content" id="manage-right-content">
@@ -36,9 +36,10 @@
         </ul>
     </div>
 </div>
-
+</div>
 
 <div class="manage-user-add" id="manage-user-add" general="manage-user-add">
+<div style="width:auto;height:71px;"></div>
     <i class="icon-remove" id="close-add-user" general="close-user"></i>
     <div>
         <input type="text" placeholder="* Name" id="new-user-name" general="user-name"/>
@@ -66,6 +67,7 @@
 </div>
 
 <div class="manage-user-add" id="user-edit" general="manage-user-add">
+<div style="width:auto;height:71px;"></div>
     <i class="icon-remove" id="close-user-edit" general="close-user"></i>
     <div>
         <input type="text" placeholder="* Name" id="edit-user-name" general="user-name"/>
