--- a/app/assets/stylesheets/Manage-user.css
+++ b/app/assets/stylesheets/Manage-user.css
@@ -10,15 +10,22 @@
 /********************************************************************************************************* 添加 User
 *******************************************************************************************************************/
 .manage-user-add{
-    position:absolute;
-    top:135px;
-    bottom:0px;
-    left:-50px;
+    position:relative;
+    z-index:10;
+    left:-350px;
+    top:0px;
+    height:100%;
+    margin-top:-71px;
     width:200px;
     overflow-y:auto;
     overflow-x:hidden;
     background:rgba(251,251,251,0.8);
     transition:left 0.35s ease-out;
+    transition:left 0.2s ease-out;
+    float:left;
+}
+.manage-user-add[id="user-edit"]{
+    left:-250px ;
 }
 .manage-user-add>i{
     pointer-events:auto;
