--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -7,7 +7,7 @@
     min-width:150px;
     max-width:150px;
     margin:0;
-    padding:0;
+    padding:0 0 10px;
     list-style-type: none;
     overflow-y:auto;
     overflow-x:hidden;
@@ -15,6 +15,7 @@
     box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
     -moz-box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
+    position:relative;
 }
 .manage-left-menu li:nth-of-type(2){
     position:relative;
@@ -113,16 +114,19 @@
 /********************************************************************************************************* 右边的内容部分
 *******************************************************************************************************************/
 .manage-right-content{
-
+    padding-left:0px;
     height:100%;
     overflow-x:hidden;
-    transition:left 0.35s ease-out,right 0.55s ease-out;
+    transition:padding-left 0.4s ease-out;
 }
 /**************************************************** 上角的按钮
 *****************************************************************/
 .manage-btn-group{
     height:70px;
-    margin-left:31px;
+    position:relative;
+    display:inline-block;
+    top:42px;
+    left:33px;
 }
 .manage-btn-group>a{
     width:100px;
@@ -173,7 +177,7 @@
 /**************************************************** 下角的列表
 *****************************************************************/
 .manage-right-list{
-    margin-top:32px;
+    margin-top:66px;
     padding-bottom:40px;
 }
 .right-list-top-control{
