--- a/app/views/entity_groups/_left_menu.html.erb
+++ b/app/views/entity_groups/_left_menu.html.erb
@@ -1,4 +1,5 @@
 <ul class="manage-left-menu" id="manage-left-menu" type="entity">
+  <div style="width:auto;height:71px;"></div>
     <li>管理观察点</li>
     <li id="manage-menu-add">
         <input type="text"/>
