--- a/app/views/kpis/_new.html.erb
+++ b/app/views/kpis/_new.html.erb
@@ -1,4 +1,5 @@
 <div class="manage-kpi-add" id="manage-kpi-add">
+     <div style="width:auto;height:71px;"></div>
      <i class="icon-remove" id="close-add-kpi"></i>
      <div>
           <input type="text" placeholder="* <%= t 'manage.kpi.name'%>" id="new-kpi-name"/>
