--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -15,6 +15,7 @@
 .dashboard-content{
     height:100%;
     margin-top:-120px;
+    background-color:white;
 }
 
 /********************************************************************************************************* dashboard item
