--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -96,13 +96,13 @@
     <div id="assign-kpi" class="assign-kpi" special="user">
         <div class="assign-kpi-top">
             <a class="btn" id="assign-kpi-cancel">Cancel</a>
-            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> All KPIs</a>
+            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"  state="close"></i> All KPIs</a>
             <p><span class="normal-blue"></span><span>'s KPI</span></p>
         </div>
         <div class="assign-kpi-inner" id="assign-kpi-inner">
              
         </div>
-        <div class="assign-kpi-options" special="user" id="assign-kpi-options">
+        <div class="assign-kpi-options" special="user" id="assign-kpi-options" >
             <i class="icon-remove" id="close-assign-kpi-options"></i>
             <div class="select-div">
                 <select class="chosen-select" data-placeholder="KPI Category" id="kpi-category">
