--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -167,9 +167,11 @@
 }
 /********************************************************************************************************* left-content-main
 *******************************************************************************************************************/
+.content-left-main{
+    display:table-cell
+}
 .content-left-main[name="dashboard"]{
     height:100%;
-
 }
 .left-content-title{
     height:49px;
