--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -59,3 +59,10 @@
 .dashboard-moreDetail>i:hover{
     color:rgba(0,0,0,0.9);
 }
+.update-time{
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 12px;
+    position: absolute;
+    right: 42px;
+    top: 8px;
+}
