--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -118,6 +118,7 @@
     height:100%;
     overflow-x:hidden;
     transition:padding-left 0.4s ease-out;
+    display:table-cell;
 }
 /**************************************************** 上角的按钮
 *****************************************************************/
