--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -73,20 +73,26 @@
 .manage-left-menu li{
     text-align:center;
     color:rgba(0,0,0,0.2);
-    padding:11px 24px;
+    padding:7px 24px;
     cursor:pointer;
     transition:padding 0.3s ease-out;
     position:relative;
 
 }
 .manage-left-menu li:hover{
-    padding:11px 0 11px 35px;
+    background-color:#e2e7ef;
+}
+.manage-left-menu li:hover a{
+    color:rgba(0,0,0,0.5);
 }
 .manage-left-menu li:hover i.icon-item{
     display:block;
 }
 .manage-left-menu li.active{
-    color:#F5A133;
+    background-color:#e2e7ef
+}
+.manage-left-menu li.active a{
+    color:rgba(0,0,0,0.5);
 }
 .manage-left-menu li a{
     width:103px;
@@ -97,7 +103,7 @@
 }
 .manage-left-menu li i.icon-item{
     position:absolute;
-    top:13px;
+    top:9px;
     color:rgba(0,0,0,0.4);
     display:none;
     pointer-events:auto;
@@ -107,7 +113,7 @@
     color:rgba(0,0,0,0.65);
 }
 .manage-left-menu li .icon-trash{
-    left:25px;
+    left:6px;
 }
 
 
@@ -179,7 +185,7 @@
 /**************************************************** 下角的列表
 *****************************************************************/
 .manage-right-list{
-    margin-top:27px;
+    margin-top:21px;
     padding-bottom:40px;
 }
 .right-list-top-control{
