--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -11,7 +11,7 @@
             </div>
 
             <div class="dashboard-content" id="dashboard-content">
-                <div class="gridster" >
+                <div class="gridster" style="background-color:lightblue">
                     <ul class="dashBoard-show" id="dashBoard-show">
                     </ul>
                 </div>
