manage sone change

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,7 @@
 *= require Manage-view
 *= require Dashboard
 *= require Dashboard-add
+*= require tipsy
 *= require Entry
 *= require Log
 *= require_self
