--- a/app/assets/stylesheets/Manage-user.css
+++ b/app/assets/stylesheets/Manage-user.css
@@ -4,7 +4,7 @@
     text-align:center;
     font-weight:lighter;
     font-size:22px;
-    color:#5FA9DA;
+    color:#45ACFB;
     padding:32px 0 10px;
 }
 /********************************************************************************************************* 添加 User
@@ -21,7 +21,6 @@
     overflow-x:hidden;
     background:rgba(251,251,251,0.8);
     transition:left 0.35s ease-out;
-    transition:left 0.2s ease-out;
     float:left;
 }
 .manage-user-add[id="user-edit"]{
