--- a/app/assets/stylesheets/Manage-view.css
+++ b/app/assets/stylesheets/Manage-view.css
@@ -4,7 +4,7 @@
     text-align:center;
     font-weight:lighter;
     font-size:22px;
-    color:#5FA9DA;
+    color:#45ACFB;
     padding:32px 0 10px;
 }
 /********************************************************************************************************* 右边的头部
@@ -63,7 +63,7 @@
 *******************************************************************************************************************/
 .manage-user-add[special="entity"]{
     background-color:#333;
-    transition:left 0.3s ease-out;
+    transition:left 0.35s ease-out;
 
 }
 .manage-user-add[special="entity"]>i{
