--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -3,18 +3,16 @@
 .manage-left-menu{
     background-color:#EFF2F6;
     display:table-cell;
-    width:150px;
-    min-width:150px;
-    max-width:150px;
+    width:200px;
+    min-width:200px;
+    max-width:200px;
     margin:0;
     padding:0 0 10px;
     list-style-type: none;
     overflow-y:auto;
     overflow-x:hidden;
     z-index:20;
-    box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow:2px 0px 3px rgba(0, 0, 0, 0.2);
+    border-right:1px solid #DCDCDC;
     position:relative;
 }
 .manage-left-menu li:nth-of-type(2){
@@ -26,7 +24,7 @@
     padding:0px;
     width:123px;
     height:30px;
-    margin:0 12px 30px;
+    margin:0 37px 30px;
     border-radius:3px;
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
@@ -92,10 +90,10 @@
     background-color:#e2e7ef
 }
 .manage-left-menu li.active a{
-    color:rgba(0,0,0,0.5);
+    color:rgba(0,0,0,0.4);
 }
 .manage-left-menu li a{
-    width:103px;
+    width:152px;
     display:block;
     overflow:hidden;
     text-overflow:ellipsis;
@@ -140,7 +138,7 @@
     margin-right:20px;
     margin-left:0;
     position:absolute;
-    top:35px;
+    bottom:2px;
     padding:7px 6px;
     font-size:13px;
 }
@@ -151,6 +149,7 @@
     display:inline-block;
     transition:color 0.35s ease-out;
     font-size:21px;
+    /*display:none;*/
 }
 .manage-btn-group>p:hover{
     color:rgba(0, 0, 0, 0.65);
@@ -166,10 +165,14 @@
 }
 .manage-btn-group>input{
     padding:3px 5px;
-    height:26px;
-    width:120px;
+    height:22px;
+    width:150px;
     font-size:13px;
+    position:relative;
+    top:0px;
+    margin-top:2px;
     display:none;
+
 }
 /*.manage-btn-group>input:focus + span{*/
     /*display:inherit;*/
@@ -185,7 +188,7 @@
 /**************************************************** 下角的列表
 *****************************************************************/
 .manage-right-list{
-    margin-top:21px;
+    margin-top:30px;
     padding-bottom:40px;
 }
 .right-list-top-control{
