--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -1,38 +1,38 @@
 @font-face {
     font-family:"open-sans";
-    src: url("/assets/OpenSans-Regular.eot");
-    src: local("/assets/OpenSans-Regular Regular"),
-    local("/assets/OpenSans-Regular"),
-    url('/assets/OpenSans-Regular.woff') format('woff'),
-    url('/assets/OpenSans-Regular.ttf') format('truetype'),
-    url('/assets/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
-    /*src: url("font/OpenSans-Regular.eot");*/
-    /*src: local("font/OpenSans-Regular Regular"),*/
-    /*local("font/OpenSans-Regular"),*/
-    /*url('font/OpenSans-Regular.woff') format('woff'),*/
-    /*url('font/OpenSans-Regular.ttf') format('truetype'),*/
-    /*url('font/OpenSans-Regular.svg#OpenSans-Regular') format('svg');*/
+    /*src: url("/assets/OpenSans-Regular.eot");*/
+    /*src: local("/assets/OpenSans-Regular Regular"),*/
+    /*local("/assets/OpenSans-Regular"),*/
+    /*url('/assets/OpenSans-Regular.woff') format('woff'),*/
+    /*url('/assets/OpenSans-Regular.ttf') format('truetype'),*/
+    /*url('/assets/OpenSans-Regular.svg#OpenSans-Regular') format('svg');*/
+    src: url("font/OpenSans-Regular.eot");
+    src: local("font/OpenSans-Regular Regular"),
+    local("font/OpenSans-Regular"),
+    url('font/OpenSans-Regular.woff') format('woff'),
+    url('font/OpenSans-Regular.ttf') format('truetype'),
+    url('font/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
 }
 @font-face {
     font-family:"helve";
-    src:url("/assets/helveticaneueultralight.ttf"),
-    url("/assets/helveticaneueultralight.eot");
-    /*src:url("font/helveticaneueultralight.ttf"),*/
-    /*url("font/helveticaneueultralight.eot");*/
+    /*src:url("/assets/helveticaneueultralight.ttf"),*/
+    /*url("/assets/helveticaneueultralight.eot");*/
+    src:url("font/helveticaneueultralight.ttf"),
+    url("font/helveticaneueultralight.eot");
 }
 @font-face {
     font-family:'maven';
-    src:url("/assets/mavenprolight300.ttf"),
-    url("/assets/mavenprolight300.eot");
-    /*src:url("font/mavenprolight300.ttf"),*/
-    /*url("font/mavenprolight300.eot");*/
+    /*src:url("/assets/mavenprolight300.ttf"),*/
+    /*url("/assets/mavenprolight300.eot");*/
+    src:url("font/mavenprolight300.ttf"),
+    url("font/mavenprolight300.eot");
 }
 @font-face {
     font-family:'avenir';
-    src:url("/assets/Avenir-Roman.ttf"),
-    url("/assets/Avenir-Roman.eot");
-    /*src:url("font/Avenir-Roman.ttf"),*/
-    /*url("font/Avenir-Roman.eot");*/
+    /*src:url("/assets/Avenir-Roman.ttf"),*/
+    /*url("/assets/Avenir-Roman.eot");*/
+    src:url("font/Avenir-Roman.ttf"),
+    url("font/Avenir-Roman.eot");
 }
 html{
     height:100%;
@@ -147,7 +147,7 @@ nav ul li a span:nth-of-type(1){
 }
 nav ul li:last-of-type a span{
 
-    width:98px;
+    width:88px;
     text-align:right;
     position:relative;
     padding-left:3px;
