--- a/app/views/dashboard_items/new.html.erb
+++ b/app/views/dashboard_items/new.html.erb
@@ -112,54 +112,8 @@
         </ul>
       </div>
       <div class="put-db-chart" id="put-db-chart">
-        <div class="chart-container-top">
-          <table>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Max value</td>
-              <td>Min value</td>
-            </tr>
-          </table>
-        </div>
-        <div id="chart-container" class="db-chart-container" ></div>
-        <div class="chart-container-right">
-          <p></p>
-          <p></p>
-          <table>
-            <tr>
-              <td></td>
-              <td>Selected</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>Total</td>
-            </tr>
-          </table>
-        </div>
-        <div class="chart-container-right chart-container-right-scatter">
-
-        </div>
-        <div class="chart-container-bottom" >
-          <table>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Out of Target</td>
-              <td>Total Record</td>
-              <td>Total Value</td>
-              <td>Average Value</td>
-              <td>KPI</td>
-            </tr>
-          </table>
-        </div>
+           <table class="dashboard-item-extra-info"></table>
+           <div class="db-chart-container" id="chart-container"></div>
       </div>
     </div>
 
